--- a/about.html
+++ b/about.html
@@ -22,76 +22,186 @@
         <img src="/assets/images/me-1.jpg" alt="">
     </section>
 
-    <div style="width: 100%; position: fixed; top: 0; z-index: 1;" offset="0%">
-        <div class="marquee-container font" id="marqueeContainer">
-            <div class="marquee-text font" id="marqueeText">
-                HI HELLO WELCOME TO MY PORTFOLIO&nbsp; &nbsp;HOPE YOU ARE HAVING A WONDERFUL DAY&nbsp; &nbsp;INSIDE YOU WILL FIND COLORFUL EXPERIMENTS CREATED (mostly) USING TOUCHDESIGNER&nbsp; &nbsp;ENJOY&nbsp; &nbsp;LET'S COLLABORATE ON SOME FUN VISUALS&nbsp; &nbsp;
-            </div>
+    <div class="marquee">
+        <div class="marquee-inner">
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; intenta
+                hacer clic en cualquier texto para traducciones en ingles &nbsp; Deja que tu cerebro se sumerja y se
+                relaje &nbsp;
+            </span>
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; intenta
+                hacer clic en cualquier texto para traducciones en ingles &nbsp; Deja que tu cerebro se sumerja y se
+                relaje &nbsp;
+            </span>
+        </div>
+        <div class="marquee-inner" aria-hidden="true">
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; intenta
+                hacer clic en cualquier texto para traducciones en ingles &nbsp; Deja que tu cerebro se sumerja y se
+                relaje &nbsp;
+            </span>
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; intenta
+                hacer clic en cualquier texto para traducciones en ingles &nbsp; Deja que tu cerebro se sumerja y se
+                relaje &nbsp;
+            </span>
         </div>
     </div>
 
-    <section id="basegrid" style="height: 900px;">
+    <div class="header-title">
 
         <section class="title-banner">
-            <h1 class="title" id="english-header">
-                <a href="index.html" target="_self" class="link"><strong>fr-world</strong></a>: about wilfredo herrera
-            </h1>
-            <h1 class="title hidden" id="spanish-header">
-                <a href="index.html" target="_self" class="link"><strong>fr-world</strong></a>: sobre wilfredo herrera
-            </h1>
+            <div class="title" id="spanish-header-about">
+                <h1>
+                    <strong style="color: #4da62f;">fr-world</strong></a>: sobre wilfredo herrera
+                </h1>
+            </div>
+            <div class="title hidden" id="english-header-about">
+                <h1>
+                    <strong style="color: #4da62f;">fr-world</strong>: about wilfredo herrera
+                </h1>
+            </div>
         </section>
+    </div>
+    <div class="back-button" id="backButton">
+        <a href="index.html">
+            <img src="assets/images/icons/back-button-72-green.png" alt="">
+        </a>
+    </div>
+
+    <section id="about-grid">
 
         <section class="about-container">
 
-            <section class="about-info">
-                <p>
-                    Wilfredo hails from the vibrant island of Puerto Rico. He traveled to Rhode Island for university
-                    and discovered the joys of filmmaking. Fredo has worked as gaffer, producer, editor,
-                    cinematographer, and director on various <a class="link" href="https://youtu.be/VAabx5ttHa4"
-                        target=”_blank” rel="noopener noreferrer">projects</a> including a <a class="link"
-                        href="https://youtu.be/wNJihWmU-iE" target=”_blank” rel="noopener noreferrer">music video for
-                        the Boston band Pyramid Thieves</a>. He also dabbles in front-end web building (he coded this
-                    website! as well as others).
+            <div class="about-info">
+                <div id="about-me-sp">
+                    <p>
+                        Wilfredo proviene de la vibrante y soleada isla de Puerto Rico. Criado con Cartoon Network y
+                        mySpace, Fredo viajó a la lejana tierra de Rhode Island para estudiar en la universidad su
+                        materia favorita: el cine. Allí descubrió un tesoro de conocimiento compartido por otras
+                        personas
+                        también obsesionadas con la idea de hacer películas. Fredo ha trabajado en producción en varios
+                        roles,
+                        incluyendo como cinematografo del corto <a class="link" href="https://youtu.be/VAabx5ttHa4"
+                            target=”_blank” rel="noopener noreferrer">DYNAMITE ABRAHAM: A DOCUMENTARY</a> filmado en
+                        Super
+                        8mm, y como editor y director del video musical para el <a class="link"
+                            href="https://youtu.be/wNJihWmU-iE" target=”_blank” rel="noopener noreferrer">sencillo
+                            Thunder de la banda de Boston Pyramid Thieves</a>.
 
+                        <br>
+                        <br>
+
+                        Fredo disfruta descubrir música y crea mezclas bajo el seudónimo <a class="link"
+                            href="https://www.mixcloud.com/fr_radio/" target="_blank"><em>fredonaut</em></a>
+
+                        <br>
+                        <br>
+
+                        <iframe width="100%" height="60"
+                            src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fwarning-from-space-%E5%AE%87%E5%AE%99%E4%BA%BA%E6%9D%B1%E4%BA%AC%E3%81%AB%E7%8F%BE%E3%82%8F%E3%82%8B%2F"
+                            frameborder="0"></iframe>
+                        <iframe width="100%" height="60"
+                            src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fcat-women-of-the-moon%2F"
+                            frameborder="0"></iframe>
+
+                        <br>
+                        <br>
+
+                        Actualmente vive en la ciudad de Nueva York, su enfoque está en la producción de cortos, la
+                        manipulación de video digital/análogo, el arte generativo y el desarrollo web. Él da la
+                        bienvenida a
+                        toda colaboración artística.
+
+                        <br>
+                        <br>
+                        El resume lo encuentras <a href="assets/resume/fredo-resume-v022624.pdf" target="_blank"
+                            class="link">aquí</a>
+                    </p>
                     <br>
                     <br>
-
-                    Fredo enjoys music discovery and makes mixes under the moniker <a class="link"
-                        href="https://www.mixcloud.com/fr_radio/" target="_blank"><em>fredonaut</em></a>
-
+                    <div>
+                        <img class="image-circle" src="/assets/images/self-portrait.jpeg" alt="Self Portrait" />
+                    </div>
                     <br>
                     <br>
+                    <p>
+                        <span style="font-size: 10px;">© MCMXCI PRTRC <img
+                                src="assets/images/noun-puerto-rico-white.svg" alt=""></span>
+                    </p>
+                </div>
+                <div id="about-me-en" class="hidden">
+                    <p>
+                        Wilfredo hails from the vibrant and sunny island of Puerto Rico. Raised on Cartoon Network and
+                        MySpace, Fredo traveled to the far land of Rhode Island for university to study his favorite
+                        subject: movies. There, he discovered a treasure trove of knowledge shared by others also
+                        obsessed with the idea of making films. Fredo has worked in production in various roles,
+                        including as cinematographer for the short film <a class="link"
+                            href="https://youtu.be/VAabx5ttHa4" target=”_blank” rel="noopener noreferrer">DYNAMITE
+                            ABRAHAM: A DOCUMENTARY</a> filmed in Super 8mm, and as editor and director of the music
+                        video for the <a class="link" href="https://youtu.be/wNJihWmU-iE" target=”_blank”
+                            rel="noopener noreferrer">single <em>Thunder</em> by the Boston band Pyramid Thieves.</a>.
 
-                    <iframe width="100%" height="60"
-                        src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fwarning-from-space-%E5%AE%87%E5%AE%99%E4%BA%BA%E6%9D%B1%E4%BA%AC%E3%81%AB%E7%8F%BE%E3%82%8F%E3%82%8B%2F"
-                        frameborder="0"></iframe>
-                    <iframe width="100%" height="60"
-                        src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fcat-women-of-the-moon%2F"
-                        frameborder="0"></iframe>
+                        <br>
+                        <br>
 
+
+                        Fredo enjoys discovering music and creates mixes under the pseudonym <a class="link"
+                            href="https://www.mixcloud.com/fr_radio/" target="_blank"><em>fredonaut</em></a>
+
+                        <br>
+                        <br>
+
+                        <iframe width="100%" height="60"
+                            src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fwarning-from-space-%E5%AE%87%E5%AE%99%E4%BA%BA%E6%9D%B1%E4%BA%AC%E3%81%AB%E7%8F%BE%E3%82%8F%E3%82%8B%2F"
+                            frameborder="0"></iframe>
+                        <iframe width="100%" height="60"
+                            src="https://player-widget.mixcloud.com/widget/iframe/?hide_cover=1&mini=1&feed=%2Ffr_radio%2Fcat-women-of-the-moon%2F"
+                            frameborder="0"></iframe>
+
+                        <br>
+                        <br>
+
+                        Currently based in New York City, his focus is on short film production, digital/analog video
+                        manipulation, generative art, and web development. He welcomes all artistic collaboration.
+
+                        <br>
+                        <br>
+
+                        His resume can be found <a href="assets/resume/fredo-resume-v022624.pdf" target="_blank"
+                            class="link">here</a>
+                    </p>
                     <br>
                     <br>
-
-                    Currently based out of New York City, his current focus is in digital/analog video manipulation,
-                    generative art, and web development. He welcomes any artistic collaboration.
-
+                    <div>
+                        <img class="image-circle" src="/assets/images/self-portrait.jpeg" alt="Self Portrait" />
+                    </div>
                     <br>
                     <br>
+                    <p>
+                        <span style="font-size: 10px;">© MCMXCI PRTRC <img src="assets/images/noun-puerto-rico-white.svg" alt=""></span>
+                    </p>
 
-                    You can find his resume <a href="assets/resume/fredo-resume-v022624.pdf" target="_blank"
-                        class="link">here</a>.
+                    <p id="about-me-en" class="hidden">
 
-                    <span style="font-size: 10px;">© MCMXCI PRTRC <img src="assets/images/noun-puerto-rico-white.svg" alt=""></span>
-
-                </p>
-
-            </section>
-
-
+                    </p>
+                </div>
+            </div>
         </section>
-    </section>
 
-    <div style="height: 200px;"></div>
+        <section class="contact-card">
+            <div> contacto:
+                <a href="mailto:fredo25w@gmail.com" target="_blank" class="link">e-mail</a>
+                <a href="https://www.instagram.com/bebofrik/" target="_blank" class="link">gram</a>
+                <a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank"
+                    class="link">utube</a>
+                <a href="https://letterboxd.com/spookyfr/" target="_blank" class="link">lettrbxd</a>
+            </div>
+        </section>
+
+        <div style="height: 150px;"></div>
+        <footer>
+            <h4>© 2024 WILFREDO HERRERA. ALL RIGHTS RESERVED</h4>
+        </footer>
+
+    </section>
 
     <script src="scripts/script.js"></script>
 </body>
