--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 
     <section id="main-grid">
-        <div style="margin: 0 auto; position: relative;">
+        <div style="margin: 0 auto;">
             <div class="proj-details-container">
                 <div class="prj-details" id="prj-details-sp">
                     <h3>creados usando un mixto de herramientas digital (TouchDesigner, After Effects, Premiere Pro) y analogas (cámara de video en cinta, video mixer)</h3>
