--- a/about.html
+++ b/about.html
@@ -24,54 +24,41 @@
 
     <div class="marquee">
         <div class="marquee-inner">
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; intenta
-                hacer clic en cualquier texto para traducciones en ingles &nbsp; Deja que tu cerebro se sumerja y se
-                relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; intenta
-                hacer clic en cualquier texto para traducciones en ingles &nbsp; Deja que tu cerebro se sumerja y se
-                relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
         </div>
         <div class="marquee-inner" aria-hidden="true">
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; intenta
-                hacer clic en cualquier texto para traducciones en ingles &nbsp; Deja que tu cerebro se sumerja y se
-                relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; intenta
-                hacer clic en cualquier texto para traducciones en ingles &nbsp; Deja que tu cerebro se sumerja y se
-                relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
         </div>
     </div>
 
     <div class="header-title">
-
         <section class="title-banner">
-            <div class="title" id="spanish-header-about">
+            <div class="title" id="spanish-header-about" data-lang="spanish">
                 <h1>
-                    <strong style="color: #4da62f;">fr-world</strong></a>: sobre wilfredo herrera
+                    <a href="index.html">fr-world</a>: sobre wilfredo herrera
                 </h1>
             </div>
-            <div class="title hidden" id="english-header-about">
+            <div class="title hidden" id="english-header-about" data-lang="english">
                 <h1>
-                    <strong style="color: #4da62f;">fr-world</strong>: about wilfredo herrera
+                    <a href="index.html">fr-world</a>: about wilfredo herrera
                 </h1>
             </div>
         </section>
     </div>
-    <div class="back-button" id="backButton">
-        <a href="index.html">
-            <img src="assets/images/icons/back-button-72-green.png" alt="">
-        </a>
-    </div>
+    
 
     <section id="about-grid">
 
         <section class="about-container">
 
-            <div class="about-info">
-                <div id="about-me-sp">
+            <div class="about-info" >
+                <div id="about-me-sp" data-lang="spanish">
                     <p>
                         Wilfredo proviene de la vibrante y soleada isla de Puerto Rico. Criado con Cartoon Network y
                         mySpace, Fredo viajó a la lejana tierra de Rhode Island para estudiar en la universidad su
@@ -127,7 +114,7 @@
                                 src="assets/images/noun-puerto-rico-white.svg" alt=""></span>
                     </p>
                 </div>
-                <div id="about-me-en" class="hidden">
+                <div id="about-me-en" class="hidden" data-lang="english">
                     <p>
                         Wilfredo hails from the vibrant and sunny island of Puerto Rico. Raised on Cartoon Network and
                         MySpace, Fredo traveled to the far land of Rhode Island for university to study his favorite
