--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 
     <div class="marquee">
         <div class="marquee-inner">
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; intenta hacer clic en cualquier texto para traducciones en ingles &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; intenta hacer clic en cualquier texto para traducciones en ingles &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
         </div>
         <div class="marquee-inner" aria-hidden="true">
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; intenta hacer clic en cualquier texto para traducciones en ingles &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; intenta hacer clic en cualquier texto para traducciones en ingles &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
         </div>
     </div>
@@ -46,12 +46,12 @@
         <section class="title-banner">
             <div class="title" id="spanish-header">
                 <h1>
-                    <strong style="color: #4da62f;">fr-world</strong>: proyectos visuales de <a href="/about.html" class="link" target="_self">fredo</a> <img src="assets/images/noun-star-white.svg" alt="eight-bit style stars" style="margin: 0; margin-left: -2px; margin-top: 2px; padding: 0; width: 19px; position: absolute; fill: white;">
+                    <a href="index.html">fr-world</a>: proyectos visuales de <a href="/about.html" class="link" target="_self">fredo</a> <img src="assets/images/noun-star-white.svg" alt="eight-bit style stars" style="margin: 0; margin-left: -2px; margin-top: 2px; padding: 0; width: 19px; position: absolute; fill: white;">
                 </h1>
             </div>
             <div class="title hidden" id="english-header">
                 <h1>
-                    <strong style="color: #4da62f;">fr-world</strong>: visual projects by <a href="/about.html" class="link" target="_self">fredo</a> <img src="assets/images/noun-star-white.svg" alt="eight-bit style stars" style="margin: 0; margin-left: -2px; margin-top: 2px; padding: 0; width: 19px; position: absolute; fill: white;">
+                    <a href="index.html">fr-world</a>: visual projects by <a href="/about.html" class="link" target="_self">fredo</a> <img src="assets/images/noun-star-white.svg" alt="eight-bit style stars" style="margin: 0; margin-left: -2px; margin-top: 2px; padding: 0; width: 19px; position: absolute; fill: white;">
                 </h1>
             </div>
             
@@ -349,10 +349,9 @@
             </section>
         </div>
 
-        <div class="cursor-div">
-            <h3 id="cursorText" class="cursor-text hidden"
-                style="font-family: 'DM Mono', monospace; font-weight: 400; font-size: 10px;">hover over image for motion</h3>
-        </div>
+        <!-- <div class="cursor-div">
+            <h3 class="cursor-text" id="cursorText">hover over image for motion</h3>
+        </div> -->
 
         <div id="load-more" style="display: none;"> load more </div>
 
