--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
 
     <section id="main-grid">
         <div style="margin: 0 auto;">
-            <div class="proj-details-container">
+            <!-- <div class="proj-details-container">
                 <div class="prj-details" id="prj-details-sp">
                     <h3>creados usando un mixto de herramientas digital (TouchDesigner, After Effects, Premiere Pro) y analogas (cámara de video en cinta, video mixer)</h3>
                 </div>
                 <div class="prj-details hidden" id="prj-details-en">
                     <h3>created using a mix of digital tools (TouchDesigner, After Effects, Premiere Pro) and analog tools (video tape camera, video mixer)</h3>
                 </div>
-            </div>
+            </div> -->
             <section class="prj-grid">
                 <!-- Projects start -->
                 <section class="prj-item">
