--- a/about.html
+++ b/about.html
@@ -24,15 +24,15 @@
 
     <div class="marquee">
         <div class="marquee-inner">
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a la fabrica &nbsp; Echa un vistazo &nbsp; muchos dulces visuales para satisfacer &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a la fabrica &nbsp; Echa un vistazo &nbsp; muchos dulces visuales para satisfacer &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
         </div>
         <div class="marquee-inner" aria-hidden="true">
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a la fabrica &nbsp; Echa un vistazo &nbsp; muchos dulces visuales para satisfacer &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a la fabrica &nbsp; Echa un vistazo &nbsp; muchos dulces visuales para satisfacer &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
         </div>
     </div>
@@ -41,7 +41,7 @@
         <section class="title-banner">
             <div class="title" id="spanish-header-about" data-lang="spanish">
                 <h1>
-                    <a href="index.html">fr-world</a>: sobre wilfredo herrera
+                    <a href="index.html" >fr-world</a>: sobre wilfredo herrera
                 </h1>
             </div>
             <div class="title hidden" id="english-header-about" data-lang="english">
@@ -164,10 +164,6 @@
                     <br>
                     <p>
                         <span style="font-size: 10px;">© MCMXCI PRTRC <img src="assets/images/noun-puerto-rico-white.svg" alt=""></span>
-                    </p>
-
-                    <p id="about-me-en" class="hidden">
-
                     </p>
                 </div>
             </div>
