--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
 
     <div class="marquee">
         <div class="marquee-inner">
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a la fabrica &nbsp; Echa un vistazo &nbsp; muchos dulces visuales para satisfacer &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a la fabrica &nbsp; Echa un vistazo &nbsp; muchos dulces visuales para satisfacer &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
         </div>
         <div class="marquee-inner" aria-hidden="true">
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a la fabrica &nbsp; Echa un vistazo &nbsp; muchos dulces visuales para satisfacer &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
-            <span class="marquee-text">Hola welcome bienvenides a mi portfolio &nbsp; Echa un vistazo &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Hola welcome bienvenides a la fabrica &nbsp; Echa un vistazo &nbsp; muchos dulces visuales para satisfacer &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
             </span>
         </div>
     </div>
@@ -358,7 +358,7 @@
         <div style="height: 150px;"></div>
 
         <footer>
-            <h4>© 2024 WILFREDO HERRERA. ALL RIGHTS RESERVED</h4>
+            <h4>© 2024 WILFREDO HERRERA. ALL RIGHTS RESERVED <a href="https://www.mixcloud.com/fr_radio/" target="_blank"><img src="assets/images/icons/radio-100.png" width="16px" alt="radio icon"/></a></h4>
         </footer>
 
     </section>
