--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
         <div style="height: 150px;"></div>
 
         <footer>
-            <h4>© 2024 WILFREDO HERRERA. ALL RIGHTS RESERVED <a href="https://www.mixcloud.com/fr_radio/" target="_blank"><img src="assets/images/icons/radio-100.png" width="16px" alt="radio icon"/></a></h4>
+            <h4>WILFREDO HERRERA © 2024 <a href="https://www.mixcloud.com/fr_radio/" target="_blank"><img src="assets/images/icons/radio-100.png" width="16px" alt="radio icon"/></a></h4>
         </footer>
 
     </section>
