--- a/about.html
+++ b/about.html
@@ -181,7 +181,7 @@
 
         <div style="height: 150px;"></div>
         <footer>
-            <h4>© 2024 WILFREDO HERRERA. ALL RIGHTS RESERVED</h4>
+            <h4>WILFREDO HERRERA © 2024</h4>
         </footer>
 
     </section>
