--- a/index.html
+++ b/index.html
@@ -477,14 +477,14 @@
     </section>
 
     <footer>
-        <h4>WILFREDO HERRERA © 2024 <a href="https://www.mixcloud.com/fr_radio/" target="_blank"><img
-                    src="assets/images/icons/radio-100.png" width="16px" alt="radio icon" /></a></h4>
+        <h4>© 2024 WILFREDO HERRERA<a href="https://www.mixcloud.com/fr_radio/" target="_blank"><img
+                    src="assets/images/icons/radio-100.png" width="14px" alt="radio icon" /></a></h4>
         <div class="build-credit-wrapper">
             <div class="build-credit">
                 <!-- <img src="" alt=""> -->
-                <h3 class="font-mono" style="color: whitesmoke; font-size: 9px;"> site built by <a
-                        href="https://planetfredo.net/about" target="_blank"
-                        style="color: #4da62f; text-decoration: none;">fredito</a></h3>
+                <h3 style="color: whitesmoke; font-size: 9px;"> site built by <a
+                        href="https://planetfredo.net/index.html#about" target="_blank"
+                        style="color: black; text-decoration: none;">wilfredo</a></h3>
                 <!-- <img src="" alt=""> -->
             </div>
         </div>
