--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <section class="prj-grid">
                 <div class="collection-header-wrapper">
                     <h2 class="collection-header">A collection of lo-fi visual candies crafted through a blend of analog and digital techniques</h2>
-                    <h4 class="collection-header mobile-hidden" style="font-size: 10px;">hover cursor over images for motion</h4>
+                    <h4 class="collection-header mobile-hidden" style="font-size: 10px;">(hover cursor over images for motion)</h4>
                 </div>
                 <!-- Projects start -->
                 <section class="prj-item">
@@ -443,7 +443,7 @@
                                 <br>
                                 <br>
         
-                                His resume can be found <a href="assets/resume/fredo-resume-v022624.pdf" target="_blank"
+                                His resume can be found <a href="assets/resume/fredo-resume-v042424.pdf" target="_blank"
                                     class="link">here</a>
                             </p>
                             <br>
