--- a/index.html
+++ b/index.html
@@ -29,19 +29,15 @@
 
     <div class="marquee">
         <div class="marquee-inner">
-            <span class="marquee-text">Hola welcome bienvenides a la fabrica &nbsp; Echa un vistazo &nbsp; muchos dulces
-                visuales para satisfacer &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Welcome to the candy factory &nbsp; Take a look around &nbsp; Many visuals to satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving moderately with your vices &nbsp;
             </span>
-            <span class="marquee-text">Hola welcome bienvenides a la fabrica &nbsp; Echa un vistazo &nbsp; muchos dulces
-                visuales para satisfacer &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Welcome to the candy factory &nbsp; Take a look around &nbsp; Many visuals to satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving moderately with your vices &nbsp;
             </span>
         </div>
         <div class="marquee-inner" aria-hidden="true">
-            <span class="marquee-text">Hola welcome bienvenides a la fabrica &nbsp; Echa un vistazo &nbsp; muchos dulces
-                visuales para satisfacer &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Welcome to the candy factory &nbsp; Take a look around &nbsp; Many visuals to satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving moderately with your vices &nbsp;
             </span>
-            <span class="marquee-text">Hola welcome bienvenides a la fabrica &nbsp; Echa un vistazo &nbsp; muchos dulces
-                visuales para satisfacer &nbsp; Deja que tu cerebro se sumerja y se relaje &nbsp;
+            <span class="marquee-text">Welcome to the candy factory &nbsp; Take a look around &nbsp; Many visuals to satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving moderately with your vices &nbsp;
             </span>
         </div>
     </div>
