--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="author" content="Wilfredo Herrera">
-    <meta name="description" content="This page is the portfolio of Wilfredo Herrera">
+    <meta name="description" content="Webpage featuring art made by Wilfredo Herrera">
     <meta name="keywords" content="TouchDesigner, Visual Artist, New York artist, Audiovisual, Visualizers, Visualizer">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,35 +29,42 @@
 
     <div class="marquee">
         <div class="marquee-inner">
-            <span class="marquee-text">Welcome to the candy factory &nbsp; Take a look around &nbsp; Many visuals to satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving moderately with your vices &nbsp;
+            <span class="marquee-text">&nbsp; Howdy &nbsp; Welcome to the candy factory &nbsp; Take a look around &nbsp;
+                Many visuals to
+                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving
+                moderately with your vices &nbsp;
             </span>
-            <span class="marquee-text">Welcome to the candy factory &nbsp; Take a look around &nbsp; Many visuals to satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving moderately with your vices &nbsp;
+            <span class="marquee-text">&nbsp; Howdy &nbsp; Welcome to the candy factory &nbsp; Take a look around &nbsp;
+                Many visuals to
+                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving
+                moderately with your vices &nbsp;
             </span>
         </div>
         <div class="marquee-inner" aria-hidden="true">
-            <span class="marquee-text">Welcome to the candy factory &nbsp; Take a look around &nbsp; Many visuals to satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving moderately with your vices &nbsp;
+            <span class="marquee-text">&nbsp; Howdy &nbsp; Welcome to the candy factory &nbsp; Take a look around &nbsp;
+                Many visuals to
+                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving
+                moderately with your vices &nbsp;
             </span>
-            <span class="marquee-text">Welcome to the candy factory &nbsp; Take a look around &nbsp; Many visuals to satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving moderately with your vices &nbsp;
+            <span class="marquee-text">&nbsp; Howdy &nbsp; Welcome to the candy factory &nbsp; Take a look around &nbsp;
+                Many visuals to
+                satisfy the sweet-tooth &nbsp; Let your brain dive in and relax &nbsp; Hope that you are moving
+                moderately with your vices &nbsp;
             </span>
         </div>
     </div>
 
     <div class="header-title">
 
-        <section class="title-banner" style="mix-blend-mode: difference;">
+        <section class="title-banner">
             <div class="title" id="spanish-header">
                 <h1>
-                    <img src="assets/images/icons/galaxy2-96.png" alt="">
-                    <img src="assets/images/icons/galaxy2-96.png" alt="">
-                    <img src="assets/images/icons/galaxy2-96.png" alt="">
-                    <img src="assets/images/icons/galaxy2-96.png" alt="">
-                    <img src="assets/images/icons/galaxy2-96.png" alt="">visualisr archives
-                    <img src="assets/images/icons/galaxy2-96.png" alt="">
-                    <img src="assets/images/icons/galaxy2-96.png" alt="">
-                    <img src="assets/images/icons/galaxy2-96.png" alt="">
-                    <img src="assets/images/icons/galaxy2-96.png" alt="">
-                    <img src="assets/images/icons/galaxy2-96.png" alt="">
+                    <img src="assets/images/icons/planet-96-white.png" alt=""> FREDOO <br> oooooo
+                    <img src="assets/images/icons/planet-96-white.png" alt="">
                 </h1>
+                <h4><em>visual artist</em></h4>
+                <!-- <h2><a href="#" onclick="scrollToAbout('about')"><img src="assets/images/icons/about-96.png"
+                            alt=""></a></h2> -->
             </div>
 
         </section>
@@ -69,9 +76,13 @@
 
 
     <section id="content-grid">
-        <div style="margin: 0 auto; padding: 0;">
+        <div style="margin: 0 auto; padding: 0;" id="vis">
 
-
+            <div class="content-header-wrapper">
+                <div class="content-header">
+                    <h2 class="c-head-text">VISUALIZRS</h2>
+                </div>
+            </div>
             <section class="prj-grid">
                 <!-- Projects start -->
                 <section class="prj-item">
@@ -344,7 +355,10 @@
 
                     <div class="about-info">
                         <div id="about-me-sp" data-lang="spanish">
-                            <h2 class="about-header">About the artist</h2>
+                            <div>
+                                <h2 class="about-header">About the artist</h2>
+                                <!-- <h3><a href="#">go <br> back</a></h3> -->
+                            </div>
                             <p>
                                 WILFREDO comes from the vibrant and sunny island of Puerto Rico. Raised on Cartoon
                                 Network and MySpace, Fredo traveled to the distant land of Rhode Island to study his
@@ -352,10 +366,11 @@
                                 others also obsessed with the idea of making movies. Fredo has worked in production in
                                 various roles, including as cinematographer for the short film <a class="link"
                                     href="https://youtu.be/VAabx5ttHa4" target=”_blank”
-                                    rel="noopener noreferrer">DYNAMITE ABRAHAM: A DOCUMENTARY</a> shot on Super 8mm, and
+                                    rel="noopener noreferrer">DYNAMITE ABRAHAM: A DOCUMENTARY</a> shot on Super 8mm, as
+                                well
                                 as editor and director of the music video for the <a class="link"
                                     href="https://youtu.be/wNJihWmU-iE" target=”_blank” rel="noopener noreferrer">single
-                                    "Thunder" by the Boston band Pyramid Thieves</a>.
+                                    THUNDER</a> by the Boston band Pyramid Thieves.
 
                                 <br>
                                 <br>
@@ -388,13 +403,14 @@
                             <br>
                             <br>
                             <div>
-                                <img class="image-circle" src="/assets/images/self-portrait.jpeg" alt="Self Portrait" />
+                                <img class="image-circle" src="/assets/images/self-portrait.jpeg" alt="Self portrait" />
                             </div>
                             <br>
                             <br>
                             <p>
                                 <span style="font-size: 10px;">© MCMXCI PRTRC <img
-                                        src="assets/images/noun-puerto-rico-white.svg" alt=""></span>
+                                        src="assets/images/noun-puerto-rico-white.svg"
+                                        alt="Island of Puerto Rico"></span>
                             </p>
                         </div>
                     </div>
@@ -403,10 +419,10 @@
                 <section class="contact-card">
                     <div> contacto:
                         <a href="mailto:fredo25w@gmail.com" target="_blank" class="link">e-mail</a>
-                        <a href="https://www.instagram.com/bebofrik/" target="_blank" class="link">gram</a>
+                        <a href="https://www.instagram.com/bebofrik/" target="_blank" class="link">instagram</a>
                         <a href="https://www.youtube.com/channel/UC5oNJt-0mgmcMfv42GhqxZA" target="_blank"
-                            class="link">utube</a>
-                        <a href="https://letterboxd.com/spookyfr/" target="_blank" class="link">lettrbxd</a>
+                            class="link">youtube</a>
+                        <a href="https://letterboxd.com/spookyfr/" target="_blank" class="link">letterboxd</a>
                     </div>
                 </section>
 
@@ -418,7 +434,7 @@
 
     <footer>
         <h4>© 2024 WILFREDO HERRERA<a href="https://www.mixcloud.com/fr_radio/" target="_blank"><img
-                    src="assets/images/icons/radio-100.png" width="14px" alt="radio icon" /></a></h4>
+                    src="assets/images/icons/radio-96-white.png" width="14px" alt="radio icon" /></a></h4>
         <!-- <div class="build-credit-wrapper">
             <div class="build-credit">
                 <h3 style="color: white; font-size: 9px;"> built by <a href="https://planetfredo.net/index.html#about"
