--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <section class="title-banner">
             <div class="title" id="spanish-header">
                 <h1>
-                    <img src="assets/images/icons/planet-96-white.png" alt=""> FREDOO <br> oooooo
+                    <img src="assets/images/icons/planet-96-white.png" alt=""> WILFREDO <br> HERRERA
                     <img src="assets/images/icons/planet-96-white.png" alt="">
                 </h1>
                 <h4><em>visual artist</em></h4>
